feat: multi-API aggregation — one server, several OpenAPI documents (v1.9.0)
[apis.NAME] config sections turn one mcpify serve process into a front
for multiple OpenAPI documents: a single MCP tool surface with per-API
auth, policies, caching, retries and timeouts (precedence CLI >
[apis.NAME] > [serve] > defaults). Collision-safe naming prefixes both
sides when two APIs ship the same tool name; mcpify_health probes every
API concurrently and mcpify status exits 2 if any is down. 23 new tests
(317 total, nineteen suites).